--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "anysphere-dark-greener",
   "displayName": "Anysphere Dark greener",
   "description": "Anysphere dark greener theme for vscode",
-  "publisher": "johantinius",
+  "publisher": "verteres1001",
   "version": "1.0.0",
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
   "contributes": {
     "themes": [
       {
-        "label": "Anysphere dark Johan",
+        "label": "Anysphere dark greener",
         "uiTheme": "vs-dark",
         "path": "./themes/Anysphere_dark-color-theme.json"
       }
